--- a/frontend/thanhtoan.html
+++ b/frontend/thanhtoan.html
@@ -41,8 +41,8 @@
                     <div class="dropdown">
                         <a href="#" class="text-white dropdown-toggle d-flex align-items-center"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            <img id="user-avatar" src="./img/avt.jpg" alt="avatar"
-                                class="rounded-circle me-2" style="width:30px;height:30px;object-fit:cover;">
+                            <img id="user-avatar" src="./img/avt.jpg" alt="avatar" class="rounded-circle me-2"
+                                style="width:30px;height:30px;object-fit:cover;">
                             <span id="user-name">Tài khoản</span>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end">
@@ -83,17 +83,26 @@
                         <div class="form-section">
                             <h2 class="section-title">1. Thông Tin Giao Hàng</h2>
                             <div class="row g-3">
+                                <div class="col-12 mb-3">
+                                    <button type="button" class="btn btn-secondary" data-bs-toggle="modal"
+                                        data-bs-target="#addressModal">
+                                        Chọn địa chỉ khác
+                                    </button>
+                                </div>
                                 <div class="col-md-6">
                                     <label class="form-label">Họ và tên <span class="required">*</span></label>
-                                    <input type="text" class="form-control" name="fullName" id="fullName" placeholder="Nguyễn Văn A" required>
+                                    <input type="text" class="form-control" name="fullName" id="fullName"
+                                        placeholder="Nguyễn Văn A" required>
                                 </div>
                                 <div class="col-md-6">
                                     <label class="form-label">Số điện thoại <span class="required">*</span></label>
-                                    <input type="tel" class="form-control" name="phone" id="phone" placeholder="0123456789" required>
+                                    <input type="tel" class="form-control" name="phone" id="phone"
+                                        placeholder="0123456789" required>
                                 </div>
                                 <div class="col-12">
                                     <label class="form-label">Email <span class="required">*</span></label>
-                                    <input type="email" class="form-control" name="email" id="email" placeholder="example@gmail.com" required>
+                                    <input type="email" class="form-control" name="email" id="email"
+                                        placeholder="example@gmail.com" required readonly style="background-color: #e9ecef; color: #495057;">
                                 </div>
                                 <div class="col-md-4">
                                     <label class="form-label">Tỉnh/Thành phố <span class="required">*</span></label>
@@ -115,11 +124,13 @@
                                 </div>
                                 <div class="col-12">
                                     <label class="form-label">Địa chỉ cụ thể <span class="required">*</span></label>
-                                    <input type="text" class="form-control" name="address" id="address" placeholder="Số nhà, tên đường..." required>
+                                    <input type="text" class="form-control" name="address" id="address"
+                                        placeholder="Số nhà, tên đường..." required>
                                 </div>
                                 <div class="col-12">
                                     <label class="form-label">Ghi chú đơn hàng</label>
-                                    <textarea class="form-control" name="note" id="note" rows="2" placeholder="Ví dụ: Giao hàng giờ hành chính, gọi trước khi giao..."></textarea>
+                                    <textarea class="form-control" name="note" id="note" rows="2"
+                                        placeholder="Ví dụ: Giao hàng giờ hành chính, gọi trước khi giao..."></textarea>
                                 </div>
                             </div>
                         </div>
@@ -166,7 +177,7 @@
                 <div class="checkout-summary-section">
                     <div class="summary-card">
                         <h3 class="summary-title">Tóm Tắt Đơn Hàng</h3>
-                        
+
                         <!-- Danh sách sản phẩm -->
                         <div class="summary-items">
                             <div id="orderItems">
@@ -203,6 +214,24 @@
         </div>
     </div>
 
+    <!-- Modal chọn địa chỉ -->
+    <div class="modal fade" id="addressModal" tabindex="-1" aria-labelledby="addressModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="addressModalLabel">Chọn địa chỉ giao hàng</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body" id="addressList">
+                    <!-- Danh sách địa chỉ sẽ render bằng JS -->
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -215,7 +244,7 @@
             const bankOptions = document.getElementById('bankOptions');
             const paymentCod = document.getElementById('paymentCod');
             const paymentBank = document.getElementById('paymentBank');
-            
+
             if (method === 'cod') {
                 document.getElementById('cod').checked = true;
                 bankOptions.classList.add('d-none');
